--- a/src/sass/sprite/svg/sprite.scss
+++ b/src/sass/sprite/svg/sprite.scss
@@ -4,7 +4,7 @@
 
 .svg-iconArrowSelect {
 	@extend %svg-common;
-	background-position: 52.359550561797754% 42.31738035264484%;
+	background-position: 52.359550561797754% 38.62068965517241%;
 }
 
 .svg-iconArrowSelect-box {
@@ -12,9 +12,19 @@
 	height: 25px;
 }
 
+.svg-iconArrowSuccess {
+	@extend %svg-common;
+	background-position: 35.944700460829495% 87.26415094339623%;
+}
+
+.svg-iconArrowSuccess-box {
+	width: 38px;
+	height: 36px;
+}
+
 .svg-iconArrowsLR {
 	@extend %svg-common;
-	background-position: 72.88135593220339% 43.54838709677419%;
+	background-position: 72.88135593220339% 39.51219512195122%;
 }
 
 .svg-iconArrowsLR-box {
@@ -24,7 +34,7 @@
 
 .svg-iconArrowsUp {
 	@extend %svg-common;
-	background-position: 86.49289099526067% 70.66666666666667%;
+	background-position: 86.49289099526067% 64.16464891041163%;
 }
 
 .svg-iconArrowsUp-box {
@@ -34,7 +44,7 @@
 
 .svg-iconCPU {
 	@extend %svg-common;
-	background-position: 12.98076923076923% 85.51912568306011%;
+	background-position: 12.98076923076923% 77.47524752475248%;
 }
 
 .svg-iconCPU-box {
@@ -44,7 +54,7 @@
 
 .svg-iconCar {
 	@extend %svg-common;
-	background-position: 57.389162561576356% 13.896457765667575%;
+	background-position: 57.389162561576356% 12.592592592592593%;
 }
 
 .svg-iconCar-box {
@@ -54,7 +64,7 @@
 
 .svg-iconCart {
 	@extend %svg-common;
-	background-position: 41.411764705882355% 52.8%;
+	background-position: 41.411764705882355% 47.94188861985472%;
 }
 
 .svg-iconCart-box {
@@ -64,7 +74,7 @@
 
 .svg-iconChat {
 	@extend %svg-common;
-	background-position: 52.857142857142854% 84.5945945945946%;
+	background-position: 52.857142857142854% 76.7156862745098%;
 }
 
 .svg-iconChat-box {
@@ -74,7 +84,7 @@
 
 .svg-iconChatGray {
 	@extend %svg-common;
-	background-position: 99.28400954653938% 59.34959349593496%;
+	background-position: 99.28400954653938% 53.80835380835381%;
 }
 
 .svg-iconChatGray-box {
@@ -84,7 +94,7 @@
 
 .svg-iconChip {
 	@extend %svg-common;
-	background-position: 21.64179104477612% 16.666666666666668%;
+	background-position: 21.64179104477612% 15.099009900990099%;
 }
 
 .svg-iconChip-box {
@@ -94,7 +104,7 @@
 
 .svg-iconChipGray {
 	@extend %svg-common;
-	background-position: 99.28400954653938% 73.71273712737127%;
+	background-position: 99.28400954653938% 66.83046683046683%;
 }
 
 .svg-iconChipGray-box {
@@ -104,7 +114,7 @@
 
 .svg-iconChipWhite {
 	@extend %svg-common;
-	background-position: 0 69.97245179063361%;
+	background-position: 0 63.34164588528678%;
 }
 
 .svg-iconChipWhite-box {
@@ -114,7 +124,7 @@
 
 .svg-iconCloud {
 	@extend %svg-common;
-	background-position: 57.389162561576356% 29.444444444444443%;
+	background-position: 57.389162561576356% 26.633165829145728%;
 }
 
 .svg-iconCloud-box {
@@ -124,7 +134,7 @@
 
 .svg-iconCompareChart {
 	@extend %svg-common;
-	background-position: 26.442307692307693% 85.05434782608695%;
+	background-position: 26.442307692307693% 77.0935960591133%;
 }
 
 .svg-iconCompareChart-box {
@@ -144,7 +154,7 @@
 
 .svg-iconDynoChart {
 	@extend %svg-common;
-	background-position: 39.90384615384615% 84.5945945945946%;
+	background-position: 39.90384615384615% 76.7156862745098%;
 }
 
 .svg-iconDynoChart-box {
@@ -154,7 +164,7 @@
 
 .svg-iconEmailGray {
 	@extend %svg-common;
-	background-position: 70.32710280373831% 55.064935064935064%;
+	background-position: 70.32710280373831% 50.118203309692674%;
 }
 
 .svg-iconEmailGray-box {
@@ -164,7 +174,7 @@
 
 .svg-iconEmailGray2 {
 	@extend %svg-common;
-	background-position: 53.317535545023695% 68.27956989247312%;
+	background-position: 53.317535545023695% 61.951219512195124%;
 }
 
 .svg-iconEmailGray2-box {
@@ -174,7 +184,7 @@
 
 .svg-iconEmalPurple {
 	@extend %svg-common;
-	background-position: 28.19277108433735% 68.46361185983828%;
+	background-position: 28.19277108433735% 62.10268948655257%;
 }
 
 .svg-iconEmalPurple-box {
@@ -184,7 +194,7 @@
 
 .svg-iconErrors {
 	@extend %svg-common;
-	background-position: 0 54.09836065573771%;
+	background-position: 0 49.00990099009901%;
 }
 
 .svg-iconErrors-box {
@@ -194,7 +204,7 @@
 
 .svg-iconFacebookGray {
 	@extend %svg-common;
-	background-position: 43.89140271493213% 96.1038961038961%;
+	background-position: 8.597285067873303% 99.76359338061465%;
 }
 
 .svg-iconFacebookGray-box {
@@ -204,7 +214,7 @@
 
 .svg-iconFacebookWhite {
 	@extend %svg-common;
-	background-position: 85.26077097505669% 81.72323759791122%;
+	background-position: 85.26077097505669% 74.34679334916865%;
 }
 
 .svg-iconFacebookWhite-box {
@@ -214,7 +224,7 @@
 
 .svg-iconFreeShipping {
 	@extend %svg-common;
-	background-position: 73.05825242718447% 15.902964959568733%;
+	background-position: 73.05825242718447% 14.425427872860636%;
 }
 
 .svg-iconFreeShipping-box {
@@ -234,7 +244,7 @@
 
 .svg-iconFuelGray {
 	@extend %svg-common;
-	background-position: 86.49289099526067% 15.405405405405405%;
+	background-position: 86.49289099526067% 13.970588235294118%;
 }
 
 .svg-iconFuelGray-box {
@@ -244,7 +254,7 @@
 
 .svg-iconGTR {
 	@extend %svg-common;
-	background-position: 0 16.343490304709142%;
+	background-position: 0 14.786967418546366%;
 }
 
 .svg-iconGTR-box {
@@ -264,7 +274,7 @@
 
 .svg-iconHybrEng {
 	@extend %svg-common;
-	background-position: 16.216216216216218% 53.083109919571044%;
+	background-position: 16.216216216216218% 48.175182481751825%;
 }
 
 .svg-iconHybrEng-box {
@@ -274,7 +284,7 @@
 
 .svg-iconInstagramGray {
 	@extend %svg-common;
-	background-position: 35.944700460829495% 96.35416666666667%;
+	background-position: 0 100%;
 }
 
 .svg-iconInstagramGray-box {
@@ -284,7 +294,7 @@
 
 .svg-iconInstagramWhite {
 	@extend %svg-common;
-	background-position: 73.14814814814815% 66.49214659685863%;
+	background-position: 73.14814814814815% 60.476190476190474%;
 }
 
 .svg-iconInstagramWhite-box {
@@ -304,7 +314,7 @@
 
 .svg-iconMarkLocationGray {
 	@extend %svg-common;
-	background-position: 31.01851851851852% 31.83023872679045%;
+	background-position: 31.01851851851852% 28.91566265060241%;
 }
 
 .svg-iconMarkLocationGray-box {
@@ -314,7 +324,7 @@
 
 .svg-iconMarkLocationGray2 {
 	@extend %svg-common;
-	background-position: 85.88235294117646% 29.45945945945946%;
+	background-position: 85.88235294117646% 26.715686274509803%;
 }
 
 .svg-iconMarkLocationGray2-box {
@@ -324,7 +334,7 @@
 
 .svg-iconMarkLocationPurple {
 	@extend %svg-common;
-	background-position: 98.11320754716981% 15.258855585831062%;
+	background-position: 98.11320754716981% 13.82716049382716%;
 }
 
 .svg-iconMarkLocationPurple-box {
@@ -334,7 +344,7 @@
 
 .svg-iconMarkMapPurple {
 	@extend %svg-common;
-	background-position: 0 34.883720930232556%;
+	background-position: 0 31.413612565445025%;
 }
 
 .svg-iconMarkMapPurple-box {
@@ -344,7 +354,7 @@
 
 .svg-iconMarker {
 	@extend %svg-common;
-	background-position: 98.3451536643026% 85.30183727034121%;
+	background-position: 98.3451536643026% 77.56563245823389%;
 }
 
 .svg-iconMarker-box {
@@ -354,7 +364,7 @@
 
 .svg-iconPatent {
 	@extend %svg-common;
-	background-position: 0 85.75342465753425%;
+	background-position: 0 77.66749379652606%;
 }
 
 .svg-iconPatent-box {
@@ -364,7 +374,7 @@
 
 .svg-iconPhoneGray {
 	@extend %svg-common;
-	background-position: 40% 31.83023872679045%;
+	background-position: 40% 28.91566265060241%;
 }
 
 .svg-iconPhoneGray-box {
@@ -374,7 +384,7 @@
 
 .svg-iconPhoneGray2 {
 	@extend %svg-common;
-	background-position: 84.68677494199535% 43.513513513513516%;
+	background-position: 84.68677494199535% 39.46078431372549%;
 }
 
 .svg-iconPhoneGray2-box {
@@ -394,7 +404,7 @@
 
 .svg-iconPhoneWhite {
 	@extend %svg-common;
-	background-position: 84.68677494199535% 57.567567567567565%;
+	background-position: 84.68677494199535% 52.205882352941174%;
 }
 
 .svg-iconPhoneWhite-box {
@@ -404,7 +414,7 @@
 
 .svg-iconPinion {
 	@extend %svg-common;
-	background-position: 99.52153110047847% 30.16304347826087%;
+	background-position: 99.52153110047847% 27.339901477832512%;
 }
 
 .svg-iconPinion-box {
@@ -414,7 +424,7 @@
 
 .svg-iconPower {
 	@extend %svg-common;
-	background-position: 99.52153110047847% 44.83695652173913%;
+	background-position: 99.52153110047847% 40.64039408866995%;
 }
 
 .svg-iconPower-box {
@@ -444,7 +454,7 @@
 
 .svg-iconReturnCircle {
 	@extend %svg-common;
-	background-position: 65.23809523809524% 84.5945945945946%;
+	background-position: 65.23809523809524% 76.7156862745098%;
 }
 
 .svg-iconReturnCircle-box {
@@ -454,7 +464,7 @@
 
 .svg-iconRudder {
 	@extend %svg-common;
-	background-position: 41.33016627078385% 68.27956989247312%;
+	background-position: 41.33016627078385% 61.951219512195124%;
 }
 
 .svg-iconRudder-box {
@@ -464,7 +474,7 @@
 
 .svg-iconSearch {
 	@extend %svg-common;
-	background-position: 63.80510440835267% 66.66666666666667%;
+	background-position: 63.80510440835267% 60.62052505966587%;
 }
 
 .svg-iconSearch-box {
@@ -474,7 +484,7 @@
 
 .svg-iconShield {
 	@extend %svg-common;
-	background-position: 77.25118483412322% 84.5945945945946%;
+	background-position: 77.25118483412322% 76.7156862745098%;
 }
 
 .svg-iconShield-box {
@@ -484,7 +494,7 @@
 
 .svg-iconSpeed {
 	@extend %svg-common;
-	background-position: 0 100%;
+	background-position: 0 90.68627450980392%;
 }
 
 .svg-iconSpeed-box {
@@ -494,7 +504,7 @@
 
 .svg-iconSpeedometer {
 	@extend %svg-common;
-	background-position: 12.380952380952381% 100%;
+	background-position: 12.380952380952381% 90.68627450980392%;
 }
 
 .svg-iconSpeedometer-box {
@@ -504,7 +514,7 @@
 
 .svg-iconSpeedometerGray {
 	@extend %svg-common;
-	background-position: 24.761904761904763% 100%;
+	background-position: 24.761904761904763% 90.68627450980392%;
 }
 
 .svg-iconSpeedometerGray-box {
@@ -514,7 +524,7 @@
 
 .svg-iconSpeedometrLight {
 	@extend %svg-common;
-	background-position: 73.05825242718447% 29.72972972972973%;
+	background-position: 73.05825242718447% 26.96078431372549%;
 }
 
 .svg-iconSpeedometrLight-box {
@@ -524,7 +534,7 @@
 
 .svg-iconTrash {
 	@extend %svg-common;
-	background-position: 30.679156908665107% 53.083109919571044%;
+	background-position: 30.679156908665107% 48.175182481751825%;
 }
 
 .svg-iconTrash-box {
@@ -534,7 +544,7 @@
 
 .svg-iconUnlimit {
 	@extend %svg-common;
-	background-position: 15.92039800995025% 31.83023872679045%;
+	background-position: 15.92039800995025% 28.91566265060241%;
 }
 
 .svg-iconUnlimit-box {
@@ -544,7 +554,7 @@
 
 .svg-iconWheel {
 	@extend %svg-common;
-	background-position: 14.251207729468598% 68.64864864864865%;
+	background-position: 14.251207729468598% 62.254901960784316%;
 }
 
 .svg-iconWheel-box {
@@ -554,7 +564,7 @@
 
 .svg-iconYoutubeGray {
 	@extend %svg-common;
-	background-position: 51.86046511627907% 51.295336787564764%;
+	background-position: 51.86046511627907% 46.698113207547166%;
 }
 
 .svg-iconYoutubeGray-box {
@@ -564,7 +574,7 @@
 
 .svg-iconYoutubeWhite {
 	@extend %svg-common;
-	background-position: 39.953271028037385% 21.09375%;
+	background-position: 39.953271028037385% 19.194312796208532%;
 }
 
 .svg-iconYoutubeWhite-box {
