--- a/src/components/banner/bannerGtr.component.pug
+++ b/src/components/banner/bannerGtr.component.pug
@@ -45,4 +45,4 @@ section.banner.bannerGtr
                     img(src="assets/images/png/gtr/imgBannerGtrChipXs@1x.png"  alt="imgBannerGtrChipXs")
                 
             .bannerSelect
-                include ../select/selectBox.component.pug
+                include ../select/selectBoxGtr.component.pug
