--- a/src/sass/sprite/png/spritePNG.sass
+++ b/src/sass/sprite/png/spritePNG.sass
@@ -52,6 +52,17 @@ $icon-arrow-left-white-png-total-width: 290px
 $icon-arrow-left-white-png-total-height: 237px
 $icon-arrow-left-white-png-image: '../assets/icons/png/spritePNG.png'
 $icon-arrow-left-white-png: (212px, 45px, -212px, -45px, 45px, 45px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconArrowLeftWhite-png', )
+$icon-arrow-select-png-name: 'iconArrowSelect-png'
+$icon-arrow-select-png-x: 274px
+$icon-arrow-select-png-y: 192px
+$icon-arrow-select-png-offset-x: -274px
+$icon-arrow-select-png-offset-y: -192px
+$icon-arrow-select-png-width: 7px
+$icon-arrow-select-png-height: 5px
+$icon-arrow-select-png-total-width: 290px
+$icon-arrow-select-png-total-height: 237px
+$icon-arrow-select-png-image: '../assets/icons/png/spritePNG.png'
+$icon-arrow-select-png: (274px, 192px, -274px, -192px, 7px, 5px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconArrowSelect-png', )
 $icon-arrow-white-details-png-name: 'iconArrowWhiteDetails-png'
 $icon-arrow-white-details-png-x: 277px
 $icon-arrow-white-details-png-y: 168px
@@ -206,6 +217,17 @@ $icon-return-png-total-width: 290px
 $icon-return-png-total-height: 237px
 $icon-return-png-image: '../assets/icons/png/spritePNG.png'
 $icon-return-png: (257px, 33px, -257px, -33px, 32px, 32px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconReturn-png', )
+$icon-success-png-name: 'iconSuccess-png'
+$icon-success-png-x: 68px
+$icon-success-png-y: 212px
+$icon-success-png-offset-x: -68px
+$icon-success-png-offset-y: -212px
+$icon-success-png-width: 18px
+$icon-success-png-height: 16px
+$icon-success-png-total-width: 290px
+$icon-success-png-total-height: 237px
+$icon-success-png-image: '../assets/icons/png/spritePNG.png'
+$icon-success-png: (68px, 212px, -68px, -212px, 18px, 16px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconSuccess-png', )
 $icon-unlimit-png-name: 'iconUnlimit-png'
 $icon-unlimit-png-x: 0px
 $icon-unlimit-png-y: 212px
@@ -231,7 +253,7 @@ $icon-youtube-png: (257px, 218px, -257px, -218px, 22px, 16px, 290px, 237px, '../
 $spritesheet-width: 290px
 $spritesheet-height: 237px
 $spritesheet-image: '../assets/icons/png/spritePNG.png'
-$spritesheet-sprites: ($icon-fb-png, $icon-tw-png, $icon-arrow-left-black-png, $icon-arrow-left-white-png, $icon-arrow-white-details-png, $icon-cart-png, $icon-chat-png, $icon-close-png, $icon-close-red-png, $icon-facebook-png, $icon-free-png, $icon-info-png, $icon-instagram-png, $icon-lifetime-png, $icon-location-png, $icon-mail-png, $icon-phone-png, $icon-return-png, $icon-unlimit-png, $icon-youtube-png, )
+$spritesheet-sprites: ($icon-fb-png, $icon-tw-png, $icon-arrow-left-black-png, $icon-arrow-left-white-png, $icon-arrow-select-png, $icon-arrow-white-details-png, $icon-cart-png, $icon-chat-png, $icon-close-png, $icon-close-red-png, $icon-facebook-png, $icon-free-png, $icon-info-png, $icon-instagram-png, $icon-lifetime-png, $icon-location-png, $icon-mail-png, $icon-phone-png, $icon-return-png, $icon-success-png, $icon-unlimit-png, $icon-youtube-png, )
 $spritesheet: (290px, 237px, '../assets/icons/png/spritePNG.png', $spritesheet-sprites, )
 
 // The provided mixins are intended to be used with the array-like variables
