--- a/src/sass/sprite/svg/sprite.scss
+++ b/src/sass/sprite/svg/sprite.scss
@@ -532,6 +532,16 @@
 	height: 52px;
 }
 
+.svg-iconSuccess {
+	@extend %svg-common;
+	background-position: 44.70046082949309% 87.26415094339623%;
+}
+
+.svg-iconSuccess-box {
+	width: 38px;
+	height: 36px;
+}
+
 .svg-iconTrash {
 	@extend %svg-common;
 	background-position: 30.679156908665107% 48.175182481751825%;
