--- a/src/sass/styles-sprites.sass
+++ b/src/sass/styles-sprites.sass
@@ -69,6 +69,11 @@
     transform: rotate(180deg)
 .iconUnlimitGray
     +sprite($icon-unlimit-png)
+.iconSuccess
+    +sprite($icon-success-png)
+
+.iconArrowSelect
+    +sprite($icon-arrow-select-png)
 
 //FIXME: cascad for modal 
 .modalGallary .icon-close
