--- a/src/components/select/select.component.sass
+++ b/src/components/select/select.component.sass
@@ -121,6 +121,12 @@
     font-size: 18px
     color: #fff
 
+    &__empty
+        padding: 18px
+        display: flex
+        align-items: center
+        justify-content: center
+
     &__current
         position: relative
         box-shadow: 0 15px 30px -10px transparentize(#000, 0.9)
@@ -129,6 +135,8 @@
         display: flex
         align-items: center
 
+        &:disabled
+            cursor: not-allowed
         &:focus
             & + .select-box__list
                 opacity: 1
@@ -146,8 +154,7 @@
         top: 50%
         right: 15px
         transform: translateY(-50%)
-        width: 20px
-        opacity: 0.3
+        // width: 20px
         transition: 0.2s ease
 
     &__value
