--- a/src/sass/sprite/webp/spriteWEBP.sass
+++ b/src/sass/sprite/webp/spriteWEBP.sass
@@ -52,6 +52,17 @@ $icon-arrow-left-white-webp-total-width: 290px
 $icon-arrow-left-white-webp-total-height: 237px
 $icon-arrow-left-white-webp-image: '../assets/icons/webp/spriteWEBP.webp'
 $icon-arrow-left-white-webp: (212px, 45px, -212px, -45px, 45px, 45px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconArrowLeftWhite-webp', )
+$icon-arrow-select-webp-name: 'iconArrowSelect-webp'
+$icon-arrow-select-webp-x: 274px
+$icon-arrow-select-webp-y: 192px
+$icon-arrow-select-webp-offset-x: -274px
+$icon-arrow-select-webp-offset-y: -192px
+$icon-arrow-select-webp-width: 7px
+$icon-arrow-select-webp-height: 5px
+$icon-arrow-select-webp-total-width: 290px
+$icon-arrow-select-webp-total-height: 237px
+$icon-arrow-select-webp-image: '../assets/icons/webp/spriteWEBP.webp'
+$icon-arrow-select-webp: (274px, 192px, -274px, -192px, 7px, 5px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconArrowSelect-webp', )
 $icon-arrow-white-details-webp-name: 'iconArrowWhiteDetails-webp'
 $icon-arrow-white-details-webp-x: 277px
 $icon-arrow-white-details-webp-y: 168px
@@ -206,6 +217,17 @@ $icon-return-webp-total-width: 290px
 $icon-return-webp-total-height: 237px
 $icon-return-webp-image: '../assets/icons/webp/spriteWEBP.webp'
 $icon-return-webp: (257px, 33px, -257px, -33px, 32px, 32px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconReturn-webp', )
+$icon-success-webp-name: 'iconSuccess-webp'
+$icon-success-webp-x: 68px
+$icon-success-webp-y: 212px
+$icon-success-webp-offset-x: -68px
+$icon-success-webp-offset-y: -212px
+$icon-success-webp-width: 18px
+$icon-success-webp-height: 16px
+$icon-success-webp-total-width: 290px
+$icon-success-webp-total-height: 237px
+$icon-success-webp-image: '../assets/icons/webp/spriteWEBP.webp'
+$icon-success-webp: (68px, 212px, -68px, -212px, 18px, 16px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconSuccess-webp', )
 $icon-unlimit-webp-name: 'iconUnlimit-webp'
 $icon-unlimit-webp-x: 0px
 $icon-unlimit-webp-y: 212px
@@ -231,7 +253,7 @@ $icon-youtube-webp: (257px, 218px, -257px, -218px, 22px, 16px, 290px, 237px, '..
 $spritesheet-width: 290px
 $spritesheet-height: 237px
 $spritesheet-image: '../assets/icons/webp/spriteWEBP.webp'
-$spritesheet-sprites: ($icon-fb-webp, $icon-tw-webp, $icon-arrow-left-black-webp, $icon-arrow-left-white-webp, $icon-arrow-white-details-webp, $icon-cart-webp, $icon-chat-webp, $icon-close-webp, $icon-close-red-webp, $icon-facebook-webp, $icon-free-webp, $icon-info-webp, $icon-instagram-webp, $icon-lifetime-webp, $icon-location-webp, $icon-mail-webp, $icon-phone-webp, $icon-return-webp, $icon-unlimit-webp, $icon-youtube-webp, )
+$spritesheet-sprites: ($icon-fb-webp, $icon-tw-webp, $icon-arrow-left-black-webp, $icon-arrow-left-white-webp, $icon-arrow-select-webp, $icon-arrow-white-details-webp, $icon-cart-webp, $icon-chat-webp, $icon-close-webp, $icon-close-red-webp, $icon-facebook-webp, $icon-free-webp, $icon-info-webp, $icon-instagram-webp, $icon-lifetime-webp, $icon-location-webp, $icon-mail-webp, $icon-phone-webp, $icon-return-webp, $icon-success-webp, $icon-unlimit-webp, $icon-youtube-webp, )
 $spritesheet: (290px, 237px, '../assets/icons/webp/spriteWEBP.webp', $spritesheet-sprites, )
 
 // The provided mixins are intended to be used with the array-like variables
