--- a/src/components/banner/bannerRs.component.pug
+++ b/src/components/banner/bannerRs.component.pug
@@ -47,4 +47,5 @@ section.banner.bannerRs
                 
                 //- object(type="image/svg+xml" data="assets/images/png/rs/imgBannerRsChipLg.svg" )  Your browser does not support SVG
             .bannerSelect
-                include ../select/selectBoxRs.component.pug
+                include ../select/selectBox.mixin.pug
+                +selectBox('Rs')
