--- a/src/components/banner/banner.component.pug
+++ b/src/components/banner/banner.component.pug
@@ -17,6 +17,7 @@ section.banner
                     source( type="image/png" srcset="assets/images/png/main/imgBannerBg_768.png" media="(min-width: 768px)")
                     img(src="assets/images/png/main/imgBannerBg_320.png", alt="imgBannerBg")
             .bannerSelect
-                include ../select/selectBoxRs.component.pug
+                include ../select/selectBox.mixin.pug
+                +selectBox('Rs')
 
         
