--- a/src/components/banner/bannerChip.component.pug
+++ b/src/components/banner/bannerChip.component.pug
@@ -42,4 +42,5 @@ section.banner.bannerChip
                     img(src="assets/images/png/chip/imgBannerRsChipXs@1x.png" srcset="assets/images/png/chip/imgBannerChipXs@2x.png 2x" alt="imgBannerRsChipXs")
                 
             .bannerSelect
-                include ../select/selectBoxChip.component.pug
+                include ../select/selectBox.mixin.pug
+                +selectBox('Chip')
