--- a/src/components/cartProducts/cartProducts.component.sass
+++ b/src/components/cartProducts/cartProducts.component.sass
@@ -113,13 +113,10 @@
     right: 35px
 .cartProductSelect
     margin-top: 3%
-    // border: 1.5px solid rgba(255, 255, 255, 0.15)
-    // border-radius: 15px
-    // background: rgba(255, 255, 255, 0.15)
-    // backdrop-filter: blur(35px)
-    // height: 68px
-    // display: flex
-    // width: 100%
-    // margin-top: 3%
-    // align-items: center
-    // justify-content: space-around
+    width: 100%
+    .selectBoxContainer
+        width: 100%
+        .select
+            width: 33%
+            &:nth-of-type(3)
+                width: 33%
