--- a/src/components/select/select.component.sass
+++ b/src/components/select/select.component.sass
@@ -76,14 +76,15 @@
         height: 68px
         align-items: center
         width: 100%
+        
         &:nth-of-type(3)
             width: 75%
             +sm-block 
                 width: 200px
             +md-block 
-                width: 200px
+                width: 25%
             +lg-block 
-                width: 200px
+                width: 25%
         
             
             
@@ -93,18 +94,35 @@
             border-right: 1px solid rgba(255, 255, 255, 0.15)
         +md-block
             height: 100%
-            width: 200px
+            width: 25%
             border-right: 1px solid rgba(255, 255, 255, 0.15)
         +lg-block
             height: 100%
-            width: 200px
+            width: 25%
             border-right: 1px solid rgba(255, 255, 255, 0.15)
 
+    .selectBoxAction
+        display: flex
+        align-items: center
+        height: 100%
+        
     .selectBoxSearch
         margin-left: 2%
         display: flex
         align-items: center
         height: 68px
+    .selectBoxActionSelected
+        margin-left: 2%
+        display: flex
+        align-items: center
+        height: 68px
+        font-family: SFUIText-Bold
+        .selectBoxActionPrice 
+            font-size: 18px
+            margin-right: 12%
+        .page__btn
+            padding: 14px 10px
+
         +sm-block
             height: 100%
         +md-block
@@ -118,7 +136,7 @@
     width: 100%
     margin: 0 auto
     font-family: #{$SFUIText}-Regular
-    font-size: 18px
+    font-size: 15px
     color: #fff
 
     &__empty
