--- a/src/components/select/selectBox.component.pug
+++ b/src/components/select/selectBox.component.pug
@@ -6,6 +6,7 @@
     .selectBoxContainer
         include ./select.component.pug
         .selectBoxSearch
-            .svg-iconSearch.svg-iconSearch-box
+            //- .svg-iconSearch.svg-iconSearch-box
+            button.page__btn To cart
                 
     a.selectBoxLink.js-open-modal(href="javascript:void(0)" data-modal="modalCarCantfind") Can’t find my Car
