--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -556,16 +556,13 @@
     right: 35px
 .cartProductSelect
     margin-top: 3%
-    // border: 1.5px solid rgba(255, 255, 255, 0.15)
-    // border-radius: 15px
-    // background: rgba(255, 255, 255, 0.15)
-    // backdrop-filter: blur(35px)
-    // height: 68px
-    // display: flex
-    // width: 100%
-    // margin-top: 3%
-    // align-items: center
-    // justify-content: space-around
+    width: 100%
+    .selectBoxContainer
+        width: 100%
+        .select
+            width: 33%
+            &:nth-of-type(3)
+                width: 33%
 
 /*chat*/
 .chat
@@ -2687,14 +2684,15 @@ html
         height: 68px
         align-items: center
         width: 100%
+        
         &:nth-of-type(3)
             width: 75%
             +sm-block 
                 width: 200px
             +md-block 
-                width: 200px
+                width: 25%
             +lg-block 
-                width: 200px
+                width: 25%
         
             
             
@@ -2704,18 +2702,35 @@ html
             border-right: 1px solid rgba(255, 255, 255, 0.15)
         +md-block
             height: 100%
-            width: 200px
+            width: 25%
             border-right: 1px solid rgba(255, 255, 255, 0.15)
         +lg-block
             height: 100%
-            width: 200px
+            width: 25%
             border-right: 1px solid rgba(255, 255, 255, 0.15)
 
+    .selectBoxAction
+        display: flex
+        align-items: center
+        height: 100%
+        
     .selectBoxSearch
         margin-left: 2%
         display: flex
         align-items: center
         height: 68px
+    .selectBoxActionSelected
+        margin-left: 2%
+        display: flex
+        align-items: center
+        height: 68px
+        font-family: SFUIText-Bold
+        .selectBoxActionPrice 
+            font-size: 18px
+            margin-right: 12%
+        .page__btn
+            padding: 14px 10px
+
         +sm-block
             height: 100%
         +md-block
@@ -2729,7 +2744,7 @@ html
     width: 100%
     margin: 0 auto
     font-family: #{$SFUIText}-Regular
-    font-size: 18px
+    font-size: 15px
     color: #fff
 
     &__empty
