--- a/src/components/cartProducts/cartProducts.component.sass
+++ b/src/components/cartProducts/cartProducts.component.sass
@@ -119,4 +119,4 @@
         .select
             width: 33%
             &:nth-of-type(3)
-                width: 33%
+                border-right: none
