--- a/src/components/select/selectBox.mixin.pug
+++ b/src/components/select/selectBox.mixin.pug
@@ -8,8 +8,8 @@ mixin selectBox(productname)
                 .selectBoxSearch
                     .svg-iconSearch.svg-iconSearch-box
                
-                //- .selectBoxActionSelected
-                //-     .selectBoxActionPrice $369
-                //-     button.page__btn.page__btn_notTransparent To cart
+                .selectBoxActionSelected
+                    .selectBoxActionPrice $369
+                    a(href="cart/cart.html").page__btn.page__btn_notTransparent To cart
                         
         a.selectBoxLink.js-open-modal(href="javascript:void(0)" data-modal="modalCarCantfind") Can’t find my Car
