--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -338,6 +338,7 @@
     top: 63%
     left: 50%
     transform: translateX(-50%)
+    width: 100%
 
     +sm-block
         top: 72%
@@ -562,7 +563,7 @@
         .select
             width: 33%
             &:nth-of-type(3)
-                width: 33%
+                border-right: none
 
 /*chat*/
 .chat
@@ -2609,6 +2610,7 @@ html
 /*select*/
 .selectBox
     width: 100%
+    
 .selectBoxText
     display: none
     font-family: #{$SFUIText}-Regular
@@ -2634,33 +2636,39 @@ html
     font-size: 14px
     line-height: 29px
     letter-spacing: 0.04em
+    margin-top: 2%
 
 .selectBoxContainer
     position: relative
     display: flex
+    align-items: center
     flex-wrap: wrap
-    width: 280px
-    height: 189px
+    padding: 10px
+    // width: 280px
+    // height: 69px
+    max-height: 189px
+    max-width: 670px
+    margin: 0 auto
 
-    margin: 0 auto 2%
+    // margin: 0 auto 2%
     background: rgba(255, 255, 255, 0.15)
 
     border: 1.5px solid rgba(255, 255, 255, 0.15)
     box-sizing: border-box
     border-radius: 15px
 
-    +sm-block
-        width: 673px
-        height: 68px
-        padding: 20px 0px
-    +md-block
-        width: 673px
-        height: 68px
-        padding: 20px 0px
-    +lg-block
-        width: 673px
-        height: 68px
-        padding: 20px 0px
+    // +sm-block
+    //     width: 673px
+    //     height: 68px
+    //     padding: 20px 0px
+    // +md-block
+    //     width: 673px
+    //     height: 68px
+    //     padding: 20px 0px
+    // +lg-block
+    //     width: 673px
+    //     height: 68px
+    //     padding: 20px 0px
 
     &::after
         content: ''
@@ -2672,80 +2680,94 @@ html
         backdrop-filter: blur(35px)
         z-index: -1
         border-radius: inherit
-    div
-        &:last-child
-            border: none
+    
     .select
         font-size: 15px
         line-height: 29px
+        height: 68px
 
         display: flex
-        
-        height: 68px
         align-items: center
-        width: 100%
+        flex-grow: 1
+        
         
         &:nth-of-type(3)
-            width: 75%
+            // width: 75%
             +sm-block 
-                width: 200px
+                // width: 200px
             +md-block 
-                width: 25%
+                // width: 30%
             +lg-block 
-                width: 25%
+                // width: 30%
         
             
             
         +sm-block
             height: 100%
-            width: 200px
+            // width: 200px
             border-right: 1px solid rgba(255, 255, 255, 0.15)
         +md-block
             height: 100%
-            width: 25%
+            // width: 30%
             border-right: 1px solid rgba(255, 255, 255, 0.15)
         +lg-block
             height: 100%
-            width: 25%
+            // width: 30%
             border-right: 1px solid rgba(255, 255, 255, 0.15)
-
+        &.Selected
+            flex-grow: 1
     .selectBoxAction
         display: flex
         align-items: center
+       
         height: 100%
+
+        margin: 0 15px
+        &.Selected
+            .selectBoxActionSelected
+                display: flex
+                
+            .selectBoxSearch
+                display: none
         
     .selectBoxSearch
-        margin-left: 2%
         display: flex
         align-items: center
-        height: 68px
+        // height: 68px
+        height: 100%
     .selectBoxActionSelected
-        margin-left: 2%
-        display: flex
-        align-items: center
-        height: 68px
+
         font-family: SFUIText-Bold
+        display: none
+        align-items: center
+        justify-content: space-around
+        height: 100%
+        width: 100%
+        margin: 0 7px
+
+        
         .selectBoxActionPrice 
             font-size: 18px
-            margin-right: 12%
+            margin-right: 15%
         .page__btn
             padding: 14px 10px
 
-        +sm-block
-            height: 100%
-        +md-block
-            height: 100%
-        +lg-block
-            height: 100%
+       
 
 .select-box
     position: relative
-    display: block
+    display: flex
+
+    align-items: center
     width: 100%
     margin: 0 auto
     font-family: #{$SFUIText}-Regular
-    font-size: 15px
+    font-size: 18px
     color: #fff
+
+
+    padding: 0 28px 0 11px
+
 
     &__empty
         padding: 18px
@@ -2759,7 +2781,13 @@ html
         cursor: pointer
         outline: none
         display: flex
+        justify-content: center
         align-items: center
+
+        margin-right: 20px
+        min-width: 88px
+        width: 100%
+        // width: 135px
 
         &:disabled
             cursor: not-allowed
@@ -2772,15 +2800,13 @@ html
                 .select-box__option
                     cursor: pointer
 
-            .select-box__icon
-                transform: translateY(-50%) rotate(180deg)
 
     &__icon
+        display: flex
         position: absolute
         top: 50%
         right: 15px
         transform: translateY(-50%)
-        // width: 20px
         transition: 0.2s ease
 
     &__value
@@ -2796,7 +2822,7 @@ html
         display: none
         width: 100%
         margin: 0
-        padding: 15px
+        // padding: 15px
         background-color: transparent
 
     &__list
@@ -2829,7 +2855,7 @@ html
         padding: 15px
         // background-color: #fff
         background: rgba(255, 255, 255, 0.15)
-
+        white-space: nowrap
         &:hover,
         &:focus
             color: #546c84
