--- a/src/components/select/select.component.sass
+++ b/src/components/select/select.component.sass
@@ -36,7 +36,7 @@
     flex-wrap: wrap
     padding: 10px
     // width: 280px
-    // height: 69px
+    height: 69px
     max-height: 189px
     max-width: 670px
     margin: 0 auto
