--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -2645,7 +2645,7 @@ html
     flex-wrap: wrap
     padding: 10px
     // width: 280px
-    // height: 69px
+    height: 69px
     max-height: 189px
     max-width: 670px
     margin: 0 auto
