--- a/src/components/productBlocks/performanceChip.component.pug
+++ b/src/components/productBlocks/performanceChip.component.pug
@@ -32,4 +32,4 @@ section.performance
         .performanceImg
             img(src="assets/images/png/imgPerformance.png", alt="imgPerformance")
     include ../select/selectBox.mixin.pug
-    +selectBox('Gtr')
+    +selectBox('Chip')
