--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -8,6 +8,7 @@ block content
 		include ../components/news/news.component.pug
 		include ../components/social/social.component.pug
 		include ../components/gallary/gallary.component.pug
+		
 block modals
 	include ../components/modals/modalsMainPage.component.pug
 	
@@ -17,6 +18,6 @@ block append style
 	
 block append script
 	script(src="libs/js/swiper-bundle.min.js")
-	script(src="/js/faq/faq.component.js")
-	script(src="/js/modals/modalGallary.component.js")
+	script(src="js/faq/faq.component.js")
+	script(src="js/modals/modalGallary.component.js")
 	script(src="js/select/select.component.js")
