--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -2645,7 +2645,7 @@ html
     flex-wrap: wrap
     padding: 10px
     // width: 280px
-    height: 69px
+    // height: 69px
     max-height: 189px
     max-width: 670px
     margin: 0 auto
@@ -2684,13 +2684,19 @@ html
     .select
         font-size: 15px
         line-height: 29px
-        height: 68px
+        // height: 68px
 
         display: flex
         align-items: center
         flex-grow: 1
         
+        border-bottom: 1px solid rgba(255, 255, 255, 0.15)
+
         
+        
+        &:nth-of-type(2)
+            border-right: 0
+
         &:nth-of-type(3)
             // width: 75%
             +sm-block 
@@ -2704,12 +2710,8 @@ html
             
         +sm-block
             height: 100%
-            // width: 200px
-            border-right: 1px solid rgba(255, 255, 255, 0.15)
         +md-block
             height: 100%
-            // width: 30%
-            border-right: 1px solid rgba(255, 255, 255, 0.15)
         +lg-block
             height: 100%
             // width: 30%
@@ -2750,7 +2752,7 @@ html
             font-size: 18px
             margin-right: 15%
         .page__btn
-            padding: 14px 10px
+            padding: 12px 10px
 
        
 
@@ -2767,6 +2769,8 @@ html
 
 
     padding: 0 28px 0 11px
+
+    border-right: 1px solid rgba(255, 255, 255, 0.15)
 
 
     &__empty
@@ -2826,15 +2830,18 @@ html
         background-color: transparent
 
     &__list
+        position: absolute
+        top: 50px
+        left: -12px
+        z-index: 100
+        width: calc(100% + 20px)
+
+
 
         max-height: 200px
         overflow: scroll
 
-        position: absolute
-        top: 63px
-        left: 0
-        z-index: 100
-        width: 100%
+       
         padding: 0
         list-style: none
         opacity: 0
@@ -2845,10 +2852,12 @@ html
         animation-fill-mode: forwards
         animation-timing-function: step-start
         box-shadow: 0 15px 30px -10px transparentize(#000, 0.9)
+        border-radius: 16px
 
-        // background: rgba(255, 255, 255, 0.15)
         background: #000
         border: 1.5px solid rgba(255, 255, 255, 0.15)
+
+
 
     &__option
         display: block
