--- a/src/components/banner/banner.component.sass
+++ b/src/components/banner/banner.component.sass
@@ -262,19 +262,35 @@
         width: auto
 
 .bannerSelect
+    // position: absolute
+    // top: 63%
+    // left: 50%
+
     position: absolute
+    bottom: 0
     z-index: 3
 
-    top: 63%
-    left: 50%
-    transform: translateX(-50%)
-    width: 100%
+    width: 90%
+    
+    margin-left: 4%
 
     +sm-block
+       
         top: 72%
+        width: 100%
+        transform: translateX(-50%)
+        margin: 0
+        
     +md-block
         top: 68%
         left: 52%
+        width: 100%
+        transform: translateX(-50%)
+        margin: 0
+
     +lg-block
         top: 68%
         left: 52%
+        width: 100%
+        transform: translateX(-50%)
+        margin: 0
