--- a/src/components/select/select.component.sass
+++ b/src/components/select/select.component.sass
@@ -1,7 +1,7 @@
 /*select*/
 .selectBox
     width: 100%
-    
+
 .selectBoxText
     display: none
     font-family: #{$SFUIText}-Regular
@@ -31,6 +31,8 @@
 
 .selectBoxContainer
     position: relative
+    position: static
+
     display: flex
     align-items: center
     flex-wrap: wrap
@@ -42,9 +44,11 @@
     margin: 0 auto
 
     // margin: 0 auto 2%
-    background: rgba(255, 255, 255, 0.15)
+    // background: rgba(255, 255, 255, 0.25)
+    background: #363636
 
-    border: 1.5px solid rgba(255, 255, 255, 0.15)
+    border: 1.5px solid rgba(255, 255, 255, 0.25)
+
     box-sizing: border-box
     border-radius: 15px
 
@@ -63,6 +67,7 @@
 
     &::after
         content: ''
+        display: none
         position: absolute
         top: 0
         left: 0
@@ -71,7 +76,7 @@
         backdrop-filter: blur(35px)
         z-index: -1
         border-radius: inherit
-    
+
     .select
         font-size: 15px
         line-height: 29px
@@ -80,25 +85,30 @@
         display: flex
         align-items: center
         flex-grow: 1
-        
+
         border-bottom: 1px solid rgba(255, 255, 255, 0.15)
 
-        
-        
+        +sm-block
+            border-bottom: 0
+        +md-block
+            border-bottom: 0
+        +lg-block
+            border-bottom: 0
+
         &:nth-of-type(2)
-            border-right: 0
+            .select-box
+                border-right: 0
 
         &:nth-of-type(3)
+            border-bottom: 0
             // width: 75%
-            +sm-block 
+            +sm-block
                 // width: 200px
-            +md-block 
+            +md-block
                 // width: 30%
-            +lg-block 
+            +lg-block
                 // width: 30%
-        
-            
-            
+
         +sm-block
             height: 100%
         +md-block
@@ -112,17 +122,17 @@
     .selectBoxAction
         display: flex
         align-items: center
-       
+
         height: 100%
 
         margin: 0 15px
         &.Selected
             .selectBoxActionSelected
                 display: flex
-                
+
             .selectBoxSearch
                 display: none
-        
+
     .selectBoxSearch
         display: flex
         align-items: center
@@ -138,17 +148,15 @@
         width: 100%
         margin: 0 7px
 
-        
-        .selectBoxActionPrice 
+        .selectBoxActionPrice
             font-size: 18px
             margin-right: 15%
         .page__btn
             padding: 12px 10px
 
-       
-
 .select-box
-    position: relative
+
+    position: static
     display: flex
 
     align-items: center
@@ -158,11 +166,18 @@
     font-size: 18px
     color: #fff
 
-
     padding: 0 28px 0 11px
 
-    border-right: 1px solid rgba(255, 255, 255, 0.15)
+    margin: 10px 0
 
+    +sm-block
+        position: relative
+
+    +md-block
+        position: relative
+
+    +lg-block
+        position: relative
 
     &__empty
         padding: 18px
@@ -195,12 +210,11 @@
                 .select-box__option
                     cursor: pointer
 
-
     &__icon
         display: flex
         position: absolute
         top: 50%
-        right: 15px
+        right: -15px
         transform: translateY(-50%)
         transition: 0.2s ease
 
@@ -221,18 +235,20 @@
         background-color: transparent
 
     &__list
-        position: absolute
-        top: 50px
-        left: -12px
+        position: fixed
+        bottom: 0
+        left: 0
+        height: 70%
+        max-height: initial
+        background: #fff
+        color: #000
+
         z-index: 100
-        width: calc(100% + 20px)
+        width: 100%
 
-
-
-        max-height: 200px
+        // max-height: 200px
         overflow: scroll
 
-       
         padding: 0
         list-style: none
         opacity: 0
@@ -245,10 +261,28 @@
         box-shadow: 0 15px 30px -10px transparentize(#000, 0.9)
         border-radius: 16px
 
-        background: #000
+        // background: #000
         border: 1.5px solid rgba(255, 255, 255, 0.15)
+        +sm-block
+            position: absolute
+            top: 50px
+            left: -12px
+            width: calc(100% + 20px)
+            height: 200px
 
+        +md-block
+            position: absolute
+            top: 50px
+            left: -12px
+            width: calc(100% + 20px)
+            height: 200px
 
+        +lg-block
+            position: absolute
+            top: 50px
+            left: -12px
+            width: calc(100% + 20px)
+            height: 200px
 
     &__option
         display: block
@@ -256,6 +290,8 @@
         // background-color: #fff
         background: rgba(255, 255, 255, 0.15)
         white-space: nowrap
+
+        border-bottom: 1px solid rgba(0, 0, 0, 0.2)
         &:hover,
         &:focus
             color: #546c84
